--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-minimal
+title: Liu Taide
+description: I'm a 4th year undergraduate student at Peking University, China. Contact me with email tdliu@pku.edu.cn
